--- a/dashboard/templates/ci/pipeline_configuration.html
+++ b/dashboard/templates/ci/pipeline_configuration.html
@@ -4,172 +4,7 @@
 {% block extrascript %}
 <script src="/static/js/csrf.js"></script>
 <script>
-  function csrfSafeMethod(e) {
-      return /^(GET|HEAD|OPTIONS|TRACE)$/.test(e)
-  }
-
-  function ajax_job_template() {
-      $.ajax({
-          beforeSend: function(e, t) {
-              csrfSafeMethod(t.type) || this.crossDomain || (csrftoken ? e.setRequestHeader("X-CSRFToken", csrftoken) : e.setRequestHeader("X-CSRFToken", "{{ csrf_token }}")), $("#pipelineJobTemplate").html("<span class='spinner spinner-sm spinner-inline'></span>")
-          },
-          type: "POST",
-          url: "{% url 'ajax-pipeline-job-template' %}",
-          data: {
-              pipelineAction: $("#pipelineAction").val(),
-              pipelineUUID: "{{ ci_pipeline.ci_pipeline_uuid }}",
-          },
-          success: function(e) {
-              e && $("#pipelineJobTemplate").html(e) && $("#saveOutcome").html("") && $("#divCopyConfig").html("")
-          }
-      })
-  }
-
-  function ajax_save_pipeline_config() {
-
-      var dTargetLangs = new Array;
-      var uTargetLangs = new Array;
-
-      $(".checkbox-inline").each(function() {
-
-          var elemID = $(this).attr("id");
-
-          if (elemID && elemID.includes("downloadTargetLang")) {
-              $(this).is(":checked") && dTargetLangs.push($(this).val());
-          }
-
-          if (elemID && elemID.includes("uploadTargetLang")) {
-              $(this).is(":checked") && uTargetLangs.push($(this).val());
-          }
-      }),
-
-      $.ajax({
-            beforeSend: function(e, t) {
-                csrfSafeMethod(t.type) || this.crossDomain || (csrftoken ? e.setRequestHeader("X-CSRFToken", csrftoken) : e.setRequestHeader("X-CSRFToken", "{{ csrf_token }}")), $("#saveOutcome").html("<span class='spinner spinner-sm spinner-inline'></span>"), $("#saveConfiguration").prop('disabled', true)
-            },
-            type: "POST",
-            url: "{% url 'ajax-save-pipeline-config' %}",
-            data: {
-                chkCopyConfig: $("#checkCopyConfig").is(":checked"),
-                pipelineAction: $("#pipelineAction").val(),
-                ciPipeline: "{{ ci_pipeline.ci_pipeline_uuid }}",
-                package: "{{ ci_pipeline.ci_package.package_name }}",
-                cloneType: "{{ ci_pipeline.ci_package.platform_slug.engine_name }}",
-                cloneBranch: $("#repoCloneBranch").val(),
-                cloneRecursive: $("#cloneRecursive").is(":checked"),
-                filterDomain: $("#filterDomain").val(),
-                filterDir: $("#filterDir").val(),
-                downloadTargetLangs: dTargetLangs.toString(),
-                downloadType: "{{ ci_pipeline.ci_package.platform_slug.engine_name }}",
-                downloadBranch: $("#downloadRepoBranch").val(),
-                downloadWorkflowStep: $("#workflowStep").val(),
-                downloadPrependBranch: $("#prependBranch").is(":checked"),
-                uploadType: "{{ ci_pipeline.ci_package.platform_slug.engine_name }}",
-                uploadBranch: $("#uploadRepoBranch").val(),
-                uploadTargetLangs: uTargetLangs.toString(),
-                uploadImportSettings: $("#importSettings").val(),
-                uploadUpdate: $("#uploadUpdate").is(":checked"),
-                uploadPrependBranch: $("#prependBranch").is(":checked"),
-            },
-            success: function(e) {
-                e && $("#saveOutcome").html(e).addClass('h4 text-success');
-                $("#listPipelineConfigs").load(location.href + " #listPipelineConfigs");
-                $("#saveConfiguration").prop('disabled', false);
-            },
-            error: function(e, t, a) {
-                e && $("#saveOutcome").html(e.responseText).addClass('h4 text-danger');
-                $("#saveConfiguration").prop('disabled', false);
-            }
-        })
-  }
-
-  function runJobYAML(loopCounter, pipelineID){
-
-      var spanID = "#executeYAML" + loopCounter;
-      $.ajax({
-            beforeSend: function(e, t) {
-                csrfSafeMethod(t.type) || this.crossDomain || (csrftoken ? e.setRequestHeader("X-CSRFToken", csrftoken) : e.setRequestHeader("X-CSRFToken", "{{ csrf_token }}")), $(spanID).html("<span class='spinner spinner-sm spinner-inline'></span> <span class='h4'>Please wait..</span>")
-            },
-            type: "POST",
-            url: "{% url 'ajax-run-pipeline-config' %}",
-            data: {
-                pipeline_config_id: pipelineID
-            },
-            success: function(e) {
-                e && $(spanID).html(e).addClass('h4')
-            },
-            error: function(e, t, a) {
-                e && $(spanID).html(e.responseText).addClass('h4 text-danger')
-            }
-        })
-  }
-
-  function togglePipelineConfig(config_id){
-      waitSpinner.show(), $.ajax({
-        beforeSend: function(e, s) {
-            csrfSafeMethod(s.type) || this.crossDomain || (csrftoken ? e.setRequestHeader("X-CSRFToken", csrftoken) : e.setRequestHeader("X-CSRFToken", "{{ csrf_token }}"))
-        },
-        type: "POST",
-        url: "{% url 'ajax-toggle-pipeline-config' %}",
-        data: {
-            p_config_id: config_id
-        },
-        success: function(e) {
-            waitSpinner.hide(), $("#listPipelineConfigs").load(location.href + " #listPipelineConfigs")
-        },
-        error: function(e) {
-            waitSpinner.hide(), $("body").append('<div class="toast-pf toast-pf-max-width toast-pf-top-right alert alert-danger alert-dismissable fade in"><button type="button" class="close" data-dismiss="alert" aria-hidden="true"><span class="pficon pficon-close"></span></button><span class="pficon pficon-error-circle-o"></span>Something unexpected happened!</div>')
-        }
-    })
-  }
-
-  function deletePipelineConfig(config_id){
-      waitSpinner.show(), $.ajax({
-        beforeSend: function(e, s) {
-            csrfSafeMethod(s.type) || this.crossDomain || (csrftoken ? e.setRequestHeader("X-CSRFToken", csrftoken) : e.setRequestHeader("X-CSRFToken", "{{ csrf_token }}"))
-        },
-        type: "POST",
-        url: "{% url 'ajax-delete-pipeline-config' %}",
-        data: {
-            p_config_id: config_id
-        },
-        success: function(e) {
-            waitSpinner.hide(), $("#listPipelineConfigs").load(location.href + " #listPipelineConfigs")
-        },
-        error: function(e) {
-            waitSpinner.hide(), $("body").append('<div class="toast-pf toast-pf-max-width toast-pf-top-right alert alert-danger alert-dismissable fade in"><button type="button" class="close" data-dismiss="alert" aria-hidden="true"><span class="pficon pficon-close"></span></button><span class="pficon pficon-error-circle-o"></span>Something unexpected happened!</div>')
-        }
-    })
-  }
-
-  function deactivatePipelineConfig(pipeline_config_id){
-      togglePipelineConfig(pipeline_config_id);
-  }
-
-  function activatePipelineConfig(pipeline_config_id){
-      togglePipelineConfig(pipeline_config_id);
-  }
-
-  $(document).ready(function(){
-
-    $("#li-configurations").addClass('active') && $("#li-push").addClass('active');
-
-    var selector = '#sub-ul li';
-    $(selector).on('click', function(){
-        $(selector).removeClass('active');
-        console.log(this.innerHTML);
-        $(this).addClass('active');
-    });
-
-    $("#pipelineAction").change(function(e) {
-        return e.preventDefault(), ajax_job_template(), !1
-    });
-
-    $("#saveConfiguration").click(function(e) {
-        return e.preventDefault(), ajax_save_pipeline_config(), !1
-    });
-
-  });
+  function csrfSafeMethod(e){return/^(GET|HEAD|OPTIONS|TRACE)$/.test(e)}function ajax_job_template(){$.ajax({beforeSend:function(e,n){csrfSafeMethod(n.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),$("#pipelineJobTemplate").html("<span class='spinner spinner-sm spinner-inline'></span>")},type:"POST",url:"{% url 'ajax-pipeline-job-template' %}",data:{pipelineAction:$("#pipelineAction").val(),pipelineUUID:"{{ ci_pipeline.ci_pipeline_uuid }}"},success:function(e){e&&$("#pipelineJobTemplate").html(e)&&$("#saveOutcome").html("")&&$("#divCopyConfig").html("")}})}function ajax_save_pipeline_config(){var n=new Array,i=new Array;$(".checkbox-inline").each(function(){var e=$(this).attr("id");e&&e.includes("downloadTargetLang")&&$(this).is(":checked")&&n.push($(this).val()),e&&e.includes("uploadTargetLang")&&$(this).is(":checked")&&i.push($(this).val())}),$.ajax({beforeSend:function(e,n){csrfSafeMethod(n.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),$("#saveOutcome").html("<span class='spinner spinner-sm spinner-inline'></span>"),$("#saveConfiguration").prop("disabled",!0)},type:"POST",url:"{% url 'ajax-save-pipeline-config' %}",data:{chkCopyConfig:$("#checkCopyConfig").is(":checked"),pipelineAction:$("#pipelineAction").val(),ciPipeline:"{{ ci_pipeline.ci_pipeline_uuid }}",package:"{{ ci_pipeline.ci_package.package_name }}",cloneType:"{{ ci_pipeline.ci_package.platform_slug.engine_name }}",cloneBranch:$("#repoCloneBranch").val(),cloneRecursive:$("#cloneRecursive").is(":checked"),filterDomain:$("#filterDomain").val(),filterDir:$("#filterDir").val(),downloadTargetLangs:n.toString(),downloadType:"{{ ci_pipeline.ci_package.platform_slug.engine_name }}",downloadBranch:$("#downloadRepoBranch").val(),downloadWorkflowStep:$("#workflowStep").val(),downloadPrependBranch:$("#prependBranch").is(":checked"),uploadType:"{{ ci_pipeline.ci_package.platform_slug.engine_name }}",uploadBranch:$("#uploadRepoBranch").val(),uploadTargetLangs:i.toString(),uploadImportSettings:$("#importSettings").val(),uploadUpdate:$("#uploadUpdate").is(":checked"),uploadPrependBranch:$("#prependBranch").is(":checked")},success:function(e){e&&$("#saveOutcome").html(e).addClass("h4").removeClass("text-danger").addClass("text-success"),$("#listPipelineConfigs").load(location.href+" #listPipelineConfigs"),$("#saveConfiguration").prop("disabled",!1)},error:function(e,n,i){e&&$("#saveOutcome").html(e.responseText).addClass("h4").removeClass("text-success").addClass("text-danger"),$("#saveConfiguration").prop("disabled",!1)}})}function runJobYAML(e,n){var a="#runYAML"+e,t="#infoExecuteYAML"+e;$.ajax({beforeSend:function(e,n){csrfSafeMethod(n.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),$(t).html("<span class='spinner spinner-sm spinner-inline'></span> <span class='h4'>Please wait..</span>"),$(a).prop("disabled",!0)},type:"POST",url:"{% url 'ajax-run-pipeline-config' %}",data:{pipeline_config_id:n},success:function(e){e&&$(t).html(e).addClass("h4").removeClass("text-danger")&&$(a).prop("disabled",!1)},error:function(e,n,i){e&&$(t).html(e.responseText).addClass("h4 text-danger")&&$(a).prop("disabled",!1)}})}function closeJobYAML(e){$("#infoExecuteYAML"+e).html("")}function togglePipelineConfig(e){waitSpinner.show(),$.ajax({beforeSend:function(e,n){csrfSafeMethod(n.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}"))},type:"POST",url:"{% url 'ajax-toggle-pipeline-config' %}",data:{p_config_id:e},success:function(e){waitSpinner.hide(),$("#listPipelineConfigs").load(location.href+" #listPipelineConfigs")},error:function(e){waitSpinner.hide(),$("body").append('<div class="toast-pf toast-pf-max-width toast-pf-top-right alert alert-danger alert-dismissable fade in"><button type="button" class="close" data-dismiss="alert" aria-hidden="true"><span class="pficon pficon-close"></span></button><span class="pficon pficon-error-circle-o"></span>Something unexpected happened!</div>')}})}function deletePipelineConfig(e){waitSpinner.show(),$.ajax({beforeSend:function(e,n){csrfSafeMethod(n.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}"))},type:"POST",url:"{% url 'ajax-delete-pipeline-config' %}",data:{p_config_id:e},success:function(e){waitSpinner.hide(),$("#listPipelineConfigs").load(location.href+" #listPipelineConfigs")},error:function(e){waitSpinner.hide(),$("body").append('<div class="toast-pf toast-pf-max-width toast-pf-top-right alert alert-danger alert-dismissable fade in"><button type="button" class="close" data-dismiss="alert" aria-hidden="true"><span class="pficon pficon-close"></span></button><span class="pficon pficon-error-circle-o"></span>Something unexpected happened!</div>')}})}function deactivatePipelineConfig(e){togglePipelineConfig(e)}function activatePipelineConfig(e){togglePipelineConfig(e)}$(document).ready(function(){$("#li-configurations").addClass("active")&&$("#li-push").addClass("active");var e="#sub-ul li";$(e).on("click",function(){$(e).removeClass("active"),console.log(this.innerHTML),$(this).addClass("active")}),$("#pipelineAction").change(function(e){return e.preventDefault(),ajax_job_template(),!1}),$("#saveConfiguration").click(function(e){return e.preventDefault(),ajax_save_pipeline_config(),!1})});
 </script>
 {% endblock %}
 
