--- a/dashboard/templates/packages/_package_details.html
+++ b/dashboard/templates/packages/_package_details.html
@@ -50,7 +50,7 @@
     <span class="pull-right">
       <a href="{% url 'package-update' package.package_name %}" class="btn btn-default"
          data-toggle="tooltip" title="Settings">
-        <span class="pficon pficon-maintenance" aria-hidden="true"></span>
+        <span class="pficon pficon-maintenance" aria-hidden="true"></span> Configure
       </a>&nbsp;&nbsp;
       <span class="dropdown dropdown-kebab-pf">
         <button class="btn btn-link dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -60,7 +60,7 @@
           <li><a href="{% url 'package-add-ci-pipeline' package.package_name %}">
             <span class="pficon pficon-add-circle-o" aria-hidden="true"></span> CI Pipeline</a>
           </li>
-          <li class="disabled"><a href="#"><span class="fa fa-calendar" aria-hidden="true"></span> Schedules</a></li>
+<!--          <li class="disabled"><a href="#"><span class="fa fa-calendar" aria-hidden="true"></span> Schedules</a></li>-->
           <li role="separator" class="divider"></li>
           <li><a href="{% url 'jobs-cleanup' %}">
                 <span class="fa fa-eye-slash" aria-hidden="true"></span> Hide Branches
