--- a/dashboard/templates/ci/_job_params.html
+++ b/dashboard/templates/ci/_job_params.html
@@ -1,4 +1,14 @@
 
+<style>
+pre {
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+</style>
+
 <div>
     <pre style="font-size: small">{{ job_template|safe }}</pre>
 </div>
