Create default Pipeline Configurations
Signed-off-by: Sundeep Anand <suanand@redhat.com>

--- a/dashboard/templates/ci/list_pipelines.html
+++ b/dashboard/templates/ci/list_pipelines.html
@@ -195,7 +195,7 @@
                       </dl>
                     </div>
                     <div class="col-md-3">
-                      {% tag_pipeline_branches pipeline.ci_package.package_name pipeline.ci_package.platform_slug %}
+                      {% tag_pipeline_branches pipeline %}
                     </div>
                     <div class="col-md-9">
                       {% if pipeline.ci_platform_jobs_json %}
