--- a/dashboard/templates/ci/list_pipelines.html
+++ b/dashboard/templates/ci/list_pipelines.html
@@ -69,7 +69,7 @@
                             <li><a id="idRemovePipeline"
                                    onClick='javascript:removePipeline({{ pipeline.ci_pipeline_id }})'>
                               <span class="pficon pficon-error-circle-o" aria-hidden="true"></span>
-                              <span class="text-danger">Hide</span></a></li>
+                              <span class="text-danger">Clear & Hide</span></a></li>
                           </ul>
                       </div>
                     {% endif %}
