--- a/dashboard/templates/packages/package_view.html
+++ b/dashboard/templates/packages/package_view.html
@@ -103,7 +103,7 @@
   </div>
   <div class="panel-body">
     <div id="div-package-details">
-      {% tag_package_details package_name user %}
+      {% tag_package_details package_name user request.tenant %}
     </div>
     <hr/>
     <div id="div-stats-diff">
