--- a/dashboard/templates/packages/_latest_builds.html
+++ b/dashboard/templates/packages/_latest_builds.html
@@ -37,5 +37,5 @@
   </div>
 </div>
 {% else %}
-<h4 class="text-info">Details not found. <small>Please update latest builds.</small></h4>
+<h4 class="text-info">No build details found. <small>Please update the latest builds.</small></h4>
 {% endif %}
