--- a/dashboard/templates/packages/_package_details.html
+++ b/dashboard/templates/packages/_package_details.html
@@ -57,10 +57,12 @@
           <span class="fa fa-ellipsis-v"></span>
         </button>
         <ul class="dropdown-menu dropdown-menu-right">
-          {% if user.is_staff and request_tenant == 'RHEL' %}
+          {% if user.is_staff %}
+            {% if request_tenant == 'RHEL' or request_tenant == 'satellite' %}
             <li><a href="{% url 'package-add-ci-pipeline' package.package_name %}">
               <span class="pficon pficon-add-circle-o" aria-hidden="true"></span> CI Pipeline</a>
             </li>
+            {% endif %}
           {% endif %}
           <li class="disabled"><a href="#"><span class="fa fa-calendar" aria-hidden="true"></span> Schedules</a></li>
           <li role="separator" class="divider"></li>
