--- a/dashboard/templates/packages/package_view.html
+++ b/dashboard/templates/packages/package_view.html
@@ -93,7 +93,7 @@
       <span>
           <a type="button" class="btn btn-default" href="{% url 'jobs-logs-package' package_name %}"
              data-toggle="tooltip" title="{{ package_name }} logs">
-          <span class="fa fa-bolt" aria-hidden="true"></span> Related Jobs</a>&nbsp;&nbsp;
+          <span class="fa fa-bolt" aria-hidden="true"></span> Latest Jobs</a>&nbsp;&nbsp;
           <a href="{{request.META.HTTP_REFERER}}" class="btn btn-default btn-small">
             <span class="fa fa-chevron-left"></span> Go Back</a>
       </span>
